<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_curses"
            android:icon="@drawable/ic_video"
            android:title="@string/menu_curses" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/menu_plans" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_mail"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/menu_feedback" />
    </group>
</menu>