<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dercide.codetera.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_curses"
        android:name="com.dercide.codetera.ui.courses.CoursesFragment"
        android:label="@string/menu_curses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_plans"
        android:name="com.dercide.codetera.ui.plans.PlansFragment"
        android:label="@string/menu_plans"
        tools:layout="@layout/fragment_plans" />
</navigation>